# CICTCD

./: .gitmodules  BuildALL.ps1  CMakeLists.txt  README.md  main.py  pyproject.toml
.github/workflows/: basic.yml
cmake/: UpdateSubmodules.cmake
modules/: CMakeLists.txt
source/: CMakeLists.txt  main.cpp
templates/: welcome.html
tests/: CMakeLists.txt  my_test.cpp  test_calculation.py
tools/: CMakeLists.txt  SomeTool.cpp  SomeTool.h
